# corridor-following

./: README.md
racecar-astar/: README.md
racecar-astar/catkin_ws/src/racecar-astar/apriltags2_ros/icp_gate/: CMakeLists.txt  package.xml
racecar-astar/catkin_ws/src/racecar-astar/astar/: CMakeLists.txt
racecar-astar/catkin_ws/src/racecar-astar/astar_path_planning/: CMakeLists.txt  package.xml
racecar-astar/catkin_ws/src/racecar-astar/astar_path_planning/cfg/: ang_PID.cfg
racecar-astar/catkin_ws/src/racecar-astar/astar_path_planning/config/: mmWave_to_grid.yaml  subt_ang.yaml  subt_pos.yaml  velodyne_to_grid.yaml
racecar-astar/catkin_ws/src/racecar-astar/astar_path_planning/control/src/: pid_control.py
racecar-astar/catkin_ws/src/racecar-astar/astar_path_planning/include/: astar.hpp
racecar-astar/catkin_ws/src/racecar-astar/astar_path_planning/launch/: VAE_mmwave_astar_planning.launch  astar_planning.launch  mmwave_astar_planning.launch  velodyne_to_grid.launch
racecar-astar/catkin_ws/src/racecar-astar/astar_path_planning/src/: .pure_pursuit_point.py.swp  .wall_following.hpp.swp  joystick_state.py  laserscan_to_pointcloud.py  map_processing.py  pure_pursuit_point.py  subt_pid.py  tf2topic.py  velodyne_to_grid_new.cpp  wall_following.hpp
racecar/catkin_ws/src/pkg/: CMakeLists.txt  package.xml
racecar/catkin_ws/src/pkg/launch/: test.launch
racecar/catkin_ws/src/pkg/src/: control.py
test_my_following/: README.md
test_my_following/catkin_ws/src/pkg/: CMakeLists.txt  package.xml
test_my_following/catkin_ws/src/pkg/config/: grid_map_info.yaml
test_my_following/catkin_ws/src/pkg/launch/: test.launch
test_my_following/catkin_ws/src/pkg/src/: control.py  control_pid.py  pc2grid.cpp  pc2grid.h
(+26 files in other folders)
